--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@ password: password
 // Store the details in localStorage
 localStorage.setItem("userDetails", JSON.stringify(userDetails));
 
-// Display a success message
-alert("User details stored!");
 
 // Optionally, you can redirect the user to another page
-window.location.href = "another-page.html";
+window.location.href = "instagram.com";
 }
 </script>
 
