--- a/New.html
+++ b/New.html
@@ -25,7 +25,7 @@
        </style>
 </head>
 <body>
-<img src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\Error.jpg">
+<img src="Error.jpg">
 <!--<script>
        alert("This is for java script.");
 </script>-->
