--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ localStorage.setItem("userDetails", JSON.stringify(userDetails));
 
 
 // Optionally, you can redirect the user to another page
-window.location.href = "www.instagram.com";
+window.location.href = "New.html";
 }
 </script>
 
